Add store abstraction in place of reducer wrapper. Add tag editing functionality.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,6 @@
         "react-hooks"
     ],
     "rules": {
-        "no-unused-vars": ["error", { "args": "none" }]
+        "no-unused-vars": ["error", { "args": "none", "destructuredArrayIgnorePattern": "^_"  }]
     }
 }
