--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-async": "^10.0.1",
     "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5",
     "throat": "^6.0.1"
   }
 }
